--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,6 +15,11 @@ android {
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         multiDexEnabled true
     }
+    testOptions {
+        unitTests {
+            includeAndroidResources = true
+        }
+    }
     buildTypes {
         release {
             minifyEnabled false
@@ -39,17 +44,18 @@ dependencies {
     def appcompat_version = "1.1.0"
     def lifecycle_version = "2.1.0"
     //Unit Testing
-    def robolectric_version = '3.8'
+    def robolectric_version = '4.3'
     def junit_version = '4.12'
     def mockito_version = '2.2.0'
     def kluent_version = '1.14'
     //Acceptance Testing
-    def runner_version = '1.0.2-alpha1'
-    def espresso_version = '3.0.2-alpha1'
-    def room_version = "2.2.1"
+    def runner_version = '1.2.0'
+    def espresso_version = '3.2.0'
+    def room_version = "2.2.3"
     def okhttp_version = "4.2.1"
     def retrofit_version = "2.6.2"
     def preference_version = "1.1.0"
+    def fragment_version = "1.2.0"
 
     implementation 'com.thefinestartist:ytpa:1.2.1'
     implementation fileTree(dir: 'libs', include: ['*.jar'])
@@ -60,8 +66,8 @@ dependencies {
     implementation 'androidx.arch.core:core-common:2.1.0'
     implementation 'androidx.arch.core:core-runtime:2.1.0'
     implementation 'androidx.activity:activity-ktx:1.0.0'
-    implementation 'androidx.fragment:fragment-ktx:1.1.0'
-    implementation 'androidx.fragment:fragment-testing:1.1.0'
+    implementation "androidx.fragment:fragment-ktx:$fragment_version"
+    implementation "androidx.fragment:fragment-testing:$fragment_version"
     implementation 'io.coil-kt:coil:0.8.0'
     implementation "androidx.appcompat:appcompat:$appcompat_version"
     implementation "com.github.haroldadmin:Vector:0.5.5"
@@ -80,13 +86,6 @@ dependencies {
     // For Kotlin use kapt instead of annotationProcessor
     // optional - Kotlin Extensions and Coroutines support for Room
     implementation "androidx.room:room-ktx:$room_version"
-    // Test helpers
-    testImplementation "androidx.room:room-testing:$room_version"
-//    implementation 'com.github.bumptech.glide:glide:4.10.0'
-//    annotationProcessor 'com.github.bumptech.glide:compiler:4.10.0'
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'androidx.test:runner:1.1.1'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.1.0'
     implementation 'androidx.transition:transition:1.2.0'
     implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
@@ -95,10 +94,19 @@ dependencies {
     testImplementation("com.squareup.okhttp3:mockwebserver:4.2.1")
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.2'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.2'
-    implementation 'com.google.android.material:material:1.0.0'
+    implementation 'com.google.android.material:material:1.1.0'
     implementation "com.squareup.okhttp3:logging-interceptor:$okhttp_version"
-    implementation "com.squareup.retrofit2:adapter-rxjava2:$retrofit_version"
     implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
+
+    implementation "com.airbnb.android:epoxy:$epoxy_version"
+    kapt "com.airbnb.android:epoxy-processor:$epoxy_version"
+    implementation 'com.android.support:multidex:1.0.3'
+    // Test helpers
+//    testImplementation "androidx.room:room-testing:$room_version"
+
+    implementation 'com.tinder.statemachine:statemachine:0.2.0'
+
+
     testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.3.2'
     testImplementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     testImplementation "org.jetbrains.kotlin:kotlin-test-junit:$kotlin_version"
@@ -106,9 +114,6 @@ dependencies {
     testImplementation "junit:junit:$junit_version"
     testImplementation "com.nhaarman.mockitokotlin2:mockito-kotlin:$mockito_version"
     testImplementation "org.amshove.kluent:kluent:$kluent_version"
-    implementation "com.airbnb.android:epoxy:$epoxy_version"
-    kapt "com.airbnb.android:epoxy-processor:$epoxy_version"
-    implementation 'com.android.support:multidex:1.0.3'
     androidTestImplementation "com.android.support.test:runner:$runner_version"
     androidTestImplementation "com.android.support.test:rules:$runner_version"
     androidTestImplementation "com.android.support.test.espresso:espresso-core:$espresso_version"
