1.fixes for sharing pdf 2. fixes for showing login screen everytime

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,6 +15,9 @@ android {
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         multiDexEnabled true
     }
+    androidExtensions{
+        experimental = true
+    }
     testOptions {
         unitTests {
             includeAndroidResources = true
