--- a/build.gradle
+++ b/build.gradle
@@ -2,12 +2,14 @@
 
 buildscript {
     ext.kotlin_version = '1.3.60'
+    ext.nav_version = "2.3.5"
     repositories {
         google()
         jcenter()
-        
+        maven { url "http://jcenter.bintray.com"}
     }
     dependencies {
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version"
         classpath 'com.android.tools.build:gradle:3.5.0'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         // NOTE: Do not place your application dependencies here; they belong
@@ -17,6 +19,7 @@ buildscript {
 
 allprojects {
     repositories {
+        mavenCentral()
         google()
         jcenter()
         maven { url 'https://jitpack.io' }
